<resources>
    <string name="app_name">El Camino De La Cerveza</string>
    <string name="title_activity_login">Ingresar en tu cuenta</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Inicia Sesión</string>
    <string name="error_incorrect_password">La contraseña es incorrecta. Si sos nuevo, registrate  <a href="https://www.elcaminodelacerveza.com">aqui</a> </string>
    <string name="error_field_required">El usuario es obligatorio</string>
    <string name="permission_rationale">"Los permisos para acceder a tus contactos son necesarios para el autocompletar"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="brewer_not_found_title">Atención</string>
    <string name="brewer_not_found_message">La cervecería {0} no está suscripta al camino de la cerveza</string>
    <string name="brewer_not_location_message">Para poder registrar tu visita en {0}, debes encontrarte en el local</string>
    <string name="brewer_already_registered_today">Ya registraste una visita en {0} para el día de la fecha. Espera hasta mañana.</string>
    <string name="brewer_couldnt_find_location">En este momento no podemos obtener tu ubicación. Prueba nuevamente o reiniciando el celular. Si el problema persiste sella tu pasaporte impreso.</string>
    <string name="cant_syncronize_passport">No se pudo sincronizar el pasaporte con el servidor. No te preocupes, puedes hacerlo manualmente con el botón sincronizar</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_passport">Pasaporte</string>
    <string name="title_settings">Ajustes</string>
    <string name="scan_button_text">Agregar</string>
    <string name="location_title">Ubicacion</string>
    <string name="location_description">Permite recibir notificaciones en caso de estar cerca de una cervecería</string>
    <string name="location_meters">Radio</string>
    <string name="location_meters_description">Distancia en metros</string>
    <string name="location_time">Intervalo</string>
    <string name="location_time_description">Tiempo en horas en el cual recibirás las notificaciones</string>
    <string name="session_title">Sesión</string>
    <string name="sincronize_title">Sincronizar</string>
    <string name="sincronize_desc">Sincroniza tu pasaporte digital con el servidor.     </string>
    <string name="sincronize_okMessage"> Tu pasaporte se sincronizó con éxito</string>
    <string name="sincronize_failedMessage"> No pudimos sincronizar tu pasaporte. Verifica que tengas acceso a internet e intenta mas tarde</string>
    <string name="session_description">Estás registrado como "{0}". ¿Cerrar sesion?</string>
    <string name="no_session_description">No hay usuario Registrado</string>
    <string name="close_session">Sesión</string>
    <string name="app_description">El camino de la cerveza</string>
    <string name="loading_title">Cargando.....</string>
    <string name="close_session_message">¿Estás seguro qué deseas cerrar la sesión actual?</string>
    <string name="notConnectedMessage">Esta aplicación necesita de una conexión a internet para bajar contenidos. Deseas conectarte?</string>
    <string name="retry">Reintentar</string>
    <string name="cancel">Cancelar</string>
    <string name="barcodeTitle">Instalar Barcode scanner?</string>
    <string name="barcodeDescription">Esta aplicacion necesita un Lector de QR. Quieres instalarlo?</string>
    <string name="yes"> Si</string>
    <string name="no">No</string>
    <string name="activateLocationTitle">Activar localizacion</string>
    <string name="activateLocationDescription">Precisás activar los servicios de ubicación, para poder recibir notificaciones de cervecerias cercanas.</string>
    <string name="activate">Activar</string>
    <string name="exitMessage">Deseas salir de la aplicación?</string>
    <string name="signup_message"> No tenes cuenta? Registrate <a href="https://www.elcaminodelacerveza.com">aqui</a></string>
    <string name="signup_message1"> No tenes cuenta? Registrate </string>
    <string name="signup_message2"> <a href="https://www.elcaminodelacerveza.com">aqui</a></string>
    <string name="proximity_advice">Te encuentras próximo a la cervecería {0}. \n Se encuentra en {1}. Quieres ir? </string>
    <string name="logintext">Ingresar</string>
    <string name="title_brewers">Locales</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="passportbelongstitle">Este pasaporte pertenece a {0}</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="direccion">Dirección:</string>
    <string name="passport_title_message">Escanea las cervecerías para completar tu pasaporte digital.</string>
    <string name="telefono">Teléfono:</string>

</resources>
