<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <PreferenceCategory android:title="@string/location_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="location"
            android:id="@+id/btnLocationPreference"
            android:title="@string/location_description" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/location_time">
        <SeekBarPreference
            android:defaultValue="true"
            android:key="location"
            android:id="@+id/minsSeekBarPreference"
            android:title="@string/location_time_description" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/location_time">
        <SeekBarPreference
            android:defaultValue="true"
            android:key="location"
            android:id="@+id/metersSeekBarPreference"
            android:title="@string/location_time_description" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/session_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="location"
            android:id="@+id/btnCloseSessionPreference"
            android:title="@string/session_description" />
    </PreferenceCategory>


</PreferenceScreen>